# ny

./: .clang_complete  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  meson.build  meson_options.txt  ny.pc.in
examples/: CMakeLists.txt
examples/cairo/: main.cpp
examples/dev/: main.cpp  main2.cpp
examples/gl/: main.cpp
examples/intro-backend/: main.cpp
examples/start/: demo.c  main.cpp
examples/test/: CMakeLists.txt
examples/test1/: CMakeLists.txt  main.cpp
examples/vulkan/: main.cpp
include/ny/: CMakeLists.txt  app.hpp  appContext.hpp  asyncRequest.hpp  backend.hpp  base.hpp  bufferSurface.hpp  cairo.hpp  color.hpp  config.h  config.h.save-failed  config.hpp.in  cursor.hpp  data.hpp  dataExchange.hpp  deferred.hpp  draw.hpp  drawContext.hpp  error.hpp  event.hpp  eventDispatcher.hpp  eventHandler.hpp  events.hpp  file.hpp  font.hpp  frame.hpp  freeType.hpp  fwd.hpp  global.hpp  gui.hpp  image.hpp  imageData.hpp  include.hpp  key.hpp  keyboard.hpp  keyboardContext.hpp  library.hpp  log.hpp  loopControl.hpp  meson.build  (+19 more)
include/ny/android/: appContext.hpp  backend.hpp  bufferSurface.hpp  egl.hpp  include.hpp  input.hpp  surface.hpp  vulkan.hpp  windowContext.hpp
include/ny/app/: animation.hpp  app.hpp  cursor.hpp  data.hpp  error.hpp  event.hpp  eventDispatcher.hpp  eventHandler.hpp  eventLoop.hpp  events.hpp  file.hpp  global.hpp  include.hpp  keyboard.hpp  mouse.hpp  surface.hpp  toplevel.hpp  widget.hpp  window.hpp
include/ny/backend/: appContext.hpp  backend.hpp  events.hpp  include.hpp  keyboard.hpp  keyboardContext.hpp  mouse.hpp  mouseContext.hpp  windowContext.hpp  windowSettings.hpp
include/ny/backends/: appContext.hpp  backend.hpp  windowContext.hpp
include/ny/base/: any.hpp  cursor.hpp  data.hpp  event.hpp  eventDispatcher.hpp  eventHandler.hpp  file.hpp  image.hpp  imageData.hpp  key.hpp  log.hpp  loopControl.hpp  utf.hpp  windowSettings.hpp
include/ny/common/: cairo.hpp  connectionList.hpp  copy.hpp  egl.hpp  eglApi.h  eglplatform.h  gl.hpp  khrplatform.h  unix.hpp  xkb.hpp
include/ny/deprecated/: error.hpp  eventLoop.hpp  global.hpp
include/ny/draw/: brush.hpp  cairo.hpp  color.hpp  drawContext.hpp  font.hpp  freeType.hpp  gdi.hpp  gl.hpp  gradient.hpp  image.hpp  include.hpp  pen.hpp  shape.hpp  svg.hpp  texture.hpp  triangulate.hpp
include/ny/gl/: egl.hpp  glContext.hpp  glDrawContext.hpp  modernGL.hpp  shader.hpp  triangulate.hpp
include/ny/graphics/: cairo.hpp  drawContext.hpp  image.hpp  shape.hpp  texture.hpp  transformable.hpp
include/ny/gui/: button.hpp  gui.hpp  include.hpp  style.hpp  textfield.hpp  widget.hpp  widgetBase.hpp
include/ny/integration/: surface.hpp
include/ny/util/: animation.hpp  callback.hpp  mat.hpp  misc.hpp  nonCopyable.hpp  rect.hpp  refVec.hpp  region.hpp  thread.hpp  time.hpp  transformable.hpp  utils.hpp  vec.hpp
include/ny/utils/: animation.hpp  callback.hpp  mat.hpp  misc.hpp  proto.hpp  rect.hpp  refVec.hpp  region.hpp  thread.hpp  utils.hpp  vec.hpp
include/ny/wayland/: appContext.hpp  backend.hpp  bufferSurface.hpp  cairo.hpp  data.hpp  dataExchange.hpp  egl.hpp  include.hpp  input.hpp  interfaces.hpp  surface.hpp  util.hpp  vulkan.hpp  waylandAppContext.hpp  waylandBackend.hpp  waylandCairo.hpp  waylandEgl.hpp  waylandInclude.hpp  waylandInterfaces.hpp  waylandUtil.hpp  waylandWindowContext.hpp  windowContext.hpp
include/ny/winapi/: appContext.hpp  backend.hpp  bufferSurface.hpp  cairo.hpp  com.hpp  gdi.hpp  gdiDrawContext.hpp  include.hpp  input.hpp  surface.hpp  util.hpp  vulkan.hpp  wgl.hpp  wglApi.h  wglApi.hpp  winapiAppContext.hpp  winapiBackend.hpp  winapiUtil.hpp  winapiWindowContext.hpp  windowContext.hpp  windows.hpp
include/ny/window/: child.hpp  cursor.hpp  defs.hpp  dialog.hpp  events.hpp  frame.hpp  include.hpp  nativeWidget.hpp  settings.hpp  sizer.hpp  style.hpp  toplevel.hpp  widget.hpp  widgets.hpp  window.hpp  windowDefs.hpp  windowEvents.hpp
include/ny/x11/: appContext.hpp  backend.hpp  bufferSurface.hpp  cairo.hpp  data.hpp  dataExchange.hpp  defs.hpp  glx.hpp  glxApi.h  glxApi.hpp  include.hpp  input.hpp  surface.hpp  util.hpp  vulkan.hpp  windowContext.hpp  x11AppContext.hpp  x11Backend.hpp  x11Cairo.hpp  x11Egl.hpp  x11Include.hpp  x11Util.hpp  x11WindowContext.hpp
src/examples/: CMakeLists.txt  b2d.cpp  basic.cpp  cairo.cpp  callbacks.cpp  child.cpp  dev.cpp  egl.cpp  gl.cpp  inline.cpp  intro.cpp  meson.build  multithread.cpp  playground.cpp  skia.cpp  surface-cairo.cpp  surface.cpp  vulkan.cpp
src/examples/android/: Android.mk  AndroidManifest.xml.in  Application.mk  CMakeLists.txt  basic.cpp  build.sh  meson.build
src/examples/cairo/: main2.cpp
src/examples/data/: playground.frag  playground.vert
src/examples/dev/: main2.cpp
src/examples/gl/: main.cpp
src/examples/intro/: main.cpp
src/examples/intro-app/: main.cpp
src/examples/intro-backend/: main.cpp
src/examples/old/: cairo.cpp  callbacks.cpp
src/examples/vulkan/: main.cpp
src/ny/: CMakeLists.txt  app.cpp  appContext.cpp  backend.cpp  cairo.cpp  color.cpp  config.cpp  config.h.in  config.hpp.in  cursor.cpp  data.cpp  dataExchange.cpp  drawContext.cpp  error.cpp  event.cpp  eventDispatcher.cpp  eventHandler.cpp  file.cpp  font.cpp  frame.cpp  freeType.cpp  image.cpp  imageData.cpp  key.cpp  keyboard.cpp  library.cpp  log.cpp  meson.build  mouse.cpp  mouseButton.cpp  shape.cpp  sizer.cpp  style.cpp  surface.cpp  texture.cpp  widget.cpp  widgets.cpp  window.cpp  windowContext.cpp  windowListener.cpp
src/ny/android/: activity.cpp  activity.hpp  appContext.cpp  backend.cpp  bufferSurface.cpp  egl.cpp  input.cpp  mainProxy.c  surface.cpp  vulkan.cpp  windowContext.cpp
src/ny/app/: CMakeLists.txt  app.cpp  child.cpp  cursor.cpp  data.cpp  dnd.cpp  error.cpp  event.cpp  eventDispatcher.cpp  eventHandler.cpp  file.cpp  keyboard.cpp  mouse.cpp  surface.cpp  window.cpp
src/ny/backend/: CMakeLists.txt  appContext.cpp  backend.cpp  windowContext.cpp
src/ny/backends/: appContext.cpp  backend.cpp  windowContext.cpp
src/ny/base/: cursor.cpp  (+8 more)
(+465 files in other folders)
