option('android', type: 'boolean', value: false)
option('enable_x11', type: 'combo', choices: ['auto', 'true', 'false'])
option('enable_wayland', type: 'combo', choices: ['auto', 'true', 'false'])
option('enable_winapi', type: 'combo', choices: ['auto', 'true', 'false'])
option('enable_gl', type: 'combo', choices: ['auto', 'true', 'false']) # glx/wgl
option('enable_egl', type: 'combo', choices: ['auto', 'true', 'false']) # wayland-egl, android
option('enable_vulkan', type: 'combo', choices: ['auto', 'true', 'false'])

option('examples', type: 'boolean', value: false)
